Added panel for adding content

--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -1,4 +1,7 @@
 content_title                   = Content management
 pages_toolbar                   = Pages
-newpage_toolbar                 = New page
+newpage_toolbar                 = Add page
+content_toolbar                 = Content
+newcontent_toolbar              = Add content
+addcontent_button               = Add
 
