Added page delete

--- a/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
@@ -1,4 +1,7 @@
+page_id_label               = ID
+page_title_label            = Titolo
 save_button                 = Salva
 show_button                 = Apri
 revert_button               = Annulla le modifiche
+delete_button               = Elimina
 
