--- a/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
@@ -1,5 +1,5 @@
 page_id_label               = ID
-page_title_label            = Titolo
+page_name_label             = Nome
 save_button                 = Salva
 show_button                 = Apri
 revert_button               = Annulla le modifiche
