Added page url keywords field

--- a/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
@@ -1,5 +1,6 @@
 page_id_label               = ID
 page_name_label             = Nome
+page_url_label              = Parole per URL
 save_button                 = Salva
 show_button                 = Apri
 revert_button               = Annulla le modifiche
