Renamed meta title to meta description

--- a/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
@@ -1,6 +1,8 @@
 page_id_label               = ID
 page_name_label             = Nome
 page_url_label              = Parole per URL
+page_meta_description_label = Meta description
+page_meta_keys_label        = Meta keys
 save_button                 = Salva
 show_button                 = Apri
 revert_button               = Annulla le modifiche
