--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -1,7 +1,7 @@
-content_title                   = Content management
-pages_toolbar                   = Pages
-newpage_toolbar                 = Add page
-content_toolbar                 = Contents
-newcontent_toolbar              = Add content
-addcontent_button               = Add
+content_title                   = Gestione contenuti
+pages_toolbar                   = Pagine
+newpage_toolbar                 = Aggiungi pagina
+content_toolbar                 = Contenuti
+newcontent_toolbar              = Aggiungi contenuto
+addcontent_button               = Aggiungi
 
