Added editing of block global parameters for global scope blocks

--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -4,4 +4,8 @@ newpage_toolbar                 = Aggiungi pagina
 content_toolbar                 = Contenuti
 newcontent_toolbar              = Aggiungi contenuto
 addcontent_button               = Aggiungi
+global_toolbar                  = Sito
+save_button                     = Salva
+revert_button                   = Annulla le modifiche
+
 
