--- a/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
@@ -4,4 +4,7 @@ newpage_toolbar                 = Add page
 content_toolbar                 = Contents
 newcontent_toolbar              = Add content
 addcontent_button               = Add
+global_toolbar                  = Site
+save_button                     = Save
+revert_button                   = Revert changes
 
