Added some labels

--- a/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
@@ -7,4 +7,7 @@ addcontent_button               = Add
 global_toolbar                  = Site
 save_button                     = Save
 revert_button                   = Revert changes
+content_type_label              = Type
+content_item_label              = Content
+page_type_label                 = Type
 
