--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -7,5 +7,7 @@ addcontent_button               = Aggiungi
 global_toolbar                  = Sito
 save_button                     = Salva
 revert_button                   = Annulla le modifiche
-
+content_type_label              = Tipo
+content_item_label              = Contenuto
+page_type_label                 = Tipo
 
