--- a/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
@@ -3,6 +3,7 @@ page_name_label             = Name
 page_url_label              = URL keywords
 page_meta_description_label = Meta description
 page_meta_keys_label        = Meta keys
+add_block_label             = Add block
 save_button                 = Save
 show_button                 = Open
 revert_button               = Undo changes
