--- a/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
@@ -3,6 +3,7 @@ page_name_label             = Nome
 page_url_label              = Parole per URL
 page_meta_description_label = Meta description
 page_meta_keys_label        = Meta keys
+add_block_label             = Aggiungi blocco
 save_button                 = Salva
 show_button                 = Apri
 revert_button               = Annulla le modifiche
