Added page url link

--- a/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
@@ -1,4 +1,5 @@
 page_id_label               = ID
+page_address_label          = Address
 page_name_label             = Name
 page_url_label              = URL keywords
 page_meta_description_label = Meta description
