--- a/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
@@ -1,4 +1,5 @@
 page_id_label               = ID
+page_address_label          = Indirizzo
 page_name_label             = Nome
 page_url_label              = Parole per URL
 page_meta_description_label = Meta description
