--- a/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
@@ -2,6 +2,7 @@ page_id_label               = ID
 page_address_label          = Indirizzo
 page_name_label             = Nome
 page_url_label              = Parole per URL
+page_title_label            = Titolo pagina
 page_meta_description_label = Meta description
 page_meta_keys_label        = Meta keys
 add_block_label             = Aggiungi blocco
