Added some tooltips

--- a/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
@@ -11,3 +11,7 @@ show_button                 = Open
 revert_button               = Undo changes
 delete_button               = Delete
 
+
+page_name_tooltip           = Name used to identify the page inside the CMS
+page_title_tooltip          = Page title appearing in the browser title bar
+
