changed domain and catalogs

--- a/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
@@ -10,4 +10,4 @@ revert_button                   = Revert changes
 content_type_label              = Type
 content_item_label              = Content
 page_type_label                 = Type
-
+lang_select_label               = Languages
