--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -10,4 +10,4 @@ revert_button                   = Annulla le modifiche
 content_type_label              = Tipo
 content_item_label              = Contenuto
 page_type_label                 = Tipo
-
+lang_select_label               = Lingua
