fix scope_session class Page

--- a/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
@@ -12,6 +12,6 @@ revert_button               = Undo changes
 delete_button               = Delete
 
 
-page_name_tooltip           = Name used to identify the page inside the CMS
+page_name_tooltip           = Name used to identify the page inside the CMS. It is not subject to language translation, has the same value for all translations.
 page_title_tooltip          = Page title appearing in the browser title bar
 
