--- a/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
@@ -11,6 +11,6 @@ show_button                 = Apri
 revert_button               = Annulla le modifiche
 delete_button               = Elimina
 
-page_name_tooltip           = Nome della pagina usato per identificarla internamente nel CMS, non è visibile sul sito
+page_name_tooltip           = Nome della pagina usato per identificarla internamente nel CMS, non è visibile sul sito. Non è soggetto a traduzioni di lingua, ha lo stesso valore per tutte le traduzioni. 
 page_title_tooltip          = Titolo della pagina che compare nella barra del titolo del browser
 
