--- a/source/setup/CHANGES
+++ b/source/setup/CHANGES
@@ -1,5 +1,7 @@
-1.1.0 -
+1.1.0 - 2014/10/10 - "Locale support"
 ------------------
+NEW FEATURES:
+- Added support for Innomedia multiple languages feature. (Amanda Accalai)
 
 
 
