Improved UI and removed untranslated messages

--- a/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
@@ -14,3 +14,5 @@ delete_button               = Elimina
 page_name_tooltip           = Nome della pagina usato per identificarla internamente nel CMS, non è visibile sul sito. Non è soggetto a traduzioni di lingua, ha lo stesso valore per tutte le traduzioni. 
 page_title_tooltip          = Titolo della pagina che compare nella barra del titolo del browser
 
+editing_language_label      = Lingua
+not_translatable_label      = " (non traducibile)"
