--- a/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
@@ -11,7 +11,8 @@ show_button                 = Open
 revert_button               = Undo changes
 delete_button               = Delete
 
-
 page_name_tooltip           = Name used to identify the page inside the CMS. It is not subject to language translation, has the same value for all translations.
 page_title_tooltip          = Page title appearing in the browser title bar
 
+editing_language_label      = Language
+not_translatable_label      = " (not translatable)"
