New content tree navigation

--- a/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
@@ -3,9 +3,10 @@ settings_title                  = Web site settings
 pages_toolbar                   = Pages
 pages_settings_toolbar          = Pages
 newpage_toolbar                 = Add page
-content_toolbar                 = Contents
+content_toolbar                 = Content
 newcontent_toolbar              = Add content
 addcontent_button               = Add
+editcontent_button              = Edit
 global_settings_toolbar         = General
 save_button                     = Save
 revert_button                   = Revert changes
@@ -13,3 +14,4 @@ content_type_label              = Type
 content_item_label              = Content
 page_type_label                 = Type
 lang_select_label               = Languages
+home_label                      = Home
