--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -6,10 +6,12 @@ newpage_toolbar                 = Aggiungi pagina
 content_toolbar                 = Contenuti
 newcontent_toolbar              = Aggiungi contenuto
 addcontent_button               = Aggiungi
-global_settings_toolbar         = Gnerali
+editcontent_button              = Modifica
+global_settings_toolbar         = Generali
 save_button                     = Salva
 revert_button                   = Annulla le modifiche
 content_type_label              = Tipo
 content_item_label              = Contenuto
 page_type_label                 = Tipo
 lang_select_label               = Lingua
+home_label                      = Home
