--- a/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
@@ -4,7 +4,7 @@ pages_toolbar                   = Pages
 pages_settings_toolbar          = Pages
 newpage_toolbar                 = Add page
 content_toolbar                 = Content
-newcontent_toolbar              = Add content
+newcontent_button               = Add new content
 addcontent_button               = Add
 editcontent_button              = Edit
 global_settings_toolbar         = General
@@ -15,3 +15,5 @@ content_item_label              = Content
 page_type_label                 = Type
 lang_select_label               = Languages
 home_label                      = Home
+preview_content_label           = Preview
+children_content_label          = Content
