--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -4,7 +4,7 @@ pages_toolbar                   = Pagine
 pages_settings_toolbar          = Pagine
 newpage_toolbar                 = Aggiungi pagina
 content_toolbar                 = Contenuti
-newcontent_toolbar              = Aggiungi contenuto
+newcontent_button               = Aggiungi nuovo contenuto
 addcontent_button               = Aggiungi
 editcontent_button              = Modifica
 global_settings_toolbar         = Generali
@@ -15,3 +15,5 @@ content_item_label              = Contenuto
 page_type_label                 = Tipo
 lang_select_label               = Lingua
 home_label                      = Home
+preview_content_label           = Anteprima
+children_content_label          = Contenuti
