Added children pages list

--- a/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
@@ -17,3 +17,5 @@ lang_select_label               = Languages
 home_label                      = Home
 preview_content_label           = Preview
 children_content_label          = Content
+page_name_header                = Name
+page_type_header                = Type
