--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -17,3 +17,5 @@ lang_select_label               = Lingua
 home_label                      = Home
 preview_content_label           = Anteprima
 children_content_label          = Contenuti
+page_name_header                = Nome
+page_type_header                = Tipo
