Added handling of static pages in page tree

--- a/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
@@ -16,6 +16,6 @@ page_type_label                 = Type
 lang_select_label               = Languages
 home_label                      = Home
 preview_content_label           = Preview
-children_content_label          = Content
+children_content_label          = Sub pages 
 page_name_header                = Name
 page_type_header                = Type
