--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -16,6 +16,6 @@ page_type_label                 = Tipo
 lang_select_label               = Lingua
 home_label                      = Home
 preview_content_label           = Anteprima
-children_content_label          = Contenuti
+children_content_label          = Sotto pagine 
 page_name_header                = Nome
 page_type_header                = Tipo
