--- a/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/editor.ini
@@ -1,7 +1,7 @@
 page_id_label               = ID
 page_address_label          = Address
 page_name_label             = Name
-page_url_label              = URL keywords
+page_url_label              = Address name 
 page_title_label            = Page title
 page_meta_description_label = Meta description
 page_meta_keys_label        = Meta keys
