--- a/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/editor.ini
@@ -1,7 +1,7 @@
 page_id_label               = ID
 page_address_label          = Indirizzo
 page_name_label             = Nome
-page_url_label              = Parole per URL
+page_url_label              = Nome indirizzo
 page_title_label            = Titolo pagina
 page_meta_description_label = Meta description
 page_meta_keys_label        = Meta keys
