Added delete and edit actions for page children items

--- a/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
@@ -19,3 +19,6 @@ preview_content_label           = Preview
 children_content_label          = Sub pages 
 page_name_header                = Name
 page_type_header                = Type
+edit_item_button                = Edit
+delete_item_button              = Delete
+delete_confirm_message          = Do you really want to delete this page?
