--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -19,3 +19,6 @@ preview_content_label           = Anteprima
 children_content_label          = Sotto pagine 
 page_name_header                = Nome
 page_type_header                = Tipo
+edit_item_button                = Modifica
+delete_item_button              = Elimina
+delete_confirm_message          = Vuoi veramente eliminare questa pagina?
