Renamed preview label to details

--- a/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
@@ -15,8 +15,8 @@ content_item_label              = Content
 page_type_label                 = Type
 lang_select_label               = Languages
 home_label                      = Home
-preview_content_label           = Preview
-children_content_label          = Sub pages 
+preview_content_label           = Details 
+children_content_label          = Sub-pages 
 page_name_header                = Name
 page_type_header                = Type
 edit_item_button                = Edit
