--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -15,8 +15,8 @@ content_item_label              = Contenuto
 page_type_label                 = Tipo
 lang_select_label               = Lingua
 home_label                      = Home
-preview_content_label           = Anteprima
-children_content_label          = Sotto pagine 
+preview_content_label           = Dettagli
+children_content_label          = Sotto-pagine 
 page_name_header                = Nome
 page_type_header                = Tipo
 edit_item_button                = Modifica
