Added missing labels

--- a/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/en/pagemanager_panel.ini
@@ -22,3 +22,4 @@ page_type_header                = Type
 edit_item_button                = Edit
 delete_item_button              = Delete
 delete_confirm_message          = Do you really want to delete this page?
+no_children_label               = The are no sub-pages
