--- a/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
+++ b/source/core/locale/catalogs/innomedia-page-manager/it/pagemanager_panel.ini
@@ -22,3 +22,4 @@ page_type_header                = Tipo
 edit_item_button                = Modifica
 delete_item_button              = Elimina
 delete_confirm_message          = Vuoi veramente eliminare questa pagina?
+no_children_label               = Non ci sono sotto-pagine 
